fix bottom of chat not readable when input visible in mpad

--- a/src/page-scss/pad.mob.scss
+++ b/src/page-scss/pad.mob.scss
@@ -6,6 +6,7 @@ $mpad-users-bg: #393029;
 $mpad-menu-bg: #111;
 $mpad-write-bg: #191e1f;
 $tabs-height: 44px;
+$input-height: 50px;
 #mpad {
 	padding: $tabs-height 0;
 	overflow-x: hidden; // prevents Chrome from having an horizontal scrollbar here
@@ -13,6 +14,9 @@ $tabs-height: 44px;
 	#messages {
 		padding-top: 10px;
 	}
+}
+#mpad-page-write.open ~ #messages {
+	padding-bottom: $input-height + 8px;
 }
 .mpad-tabs {
 	height: $tabs-height;
@@ -190,7 +194,7 @@ $tabs-height: 44px;
 	left: 0;
 	right: 0;
 	#input {
-		height: 50px;
+		height: $input-height;
 		flex: 1;
 	}
 }
